<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/toppings"
                android:textAllCaps="true"/>

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whipped_cream"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity"
                android:textAllCaps="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"/>

            <TextView
                android:id="@+id/tv_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:layout_below="@id/textView"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <Button
                android:onClick="increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"/>

        </LinearLayout>

            <TextView
                android:layout_marginVertical="16dp"
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                android:layout_below="@id/textView"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_marginVertical="16dp"
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:layout_below="@id/textView"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>



            <Button
                android:id="@+id/order_button"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:layout_below="@id/tv_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order" />
    </LinearLayout>
</ScrollView>